--- a/package.json
+++ b/package.json
@@ -13,12 +13,15 @@
     "@fortawesome/fontawesome": "^1.1.8",
     "@fortawesome/fontawesome-free": "^7.1.0",
     "@hookform/resolvers": "^5.2.2",
+    "@reduxjs/toolkit": "^2.11.0",
     "@tailwindcss/vite": "^4.1.17",
     "axios": "^1.13.2",
+    "firebase": "^12.6.0",
     "form": "^0.2.5",
     "hook": "^0.1.0",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
+    "react-redux": "^9.2.0",
     "react-router": "^7.9.6",
     "react-router-dom": "^7.9.6",
     "zod": "^4.1.13"
