--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@fortawesome/fontawesome": "^1.1.8",
+    "@fortawesome/fontawesome-free": "^7.1.0",
     "@hookform/resolvers": "^5.2.2",
     "@reduxjs/toolkit": "^2.11.0",
     "@tailwindcss/vite": "^4.1.17",
@@ -19,6 +20,8 @@
     "form": "^0.2.5",
     "hook": "^0.1.0",
     "react": "^19.2.0",
+    "react-calendar": "^6.0.0",
+    "react-date-picker": "^12.0.1",
     "react-dom": "^19.2.0",
     "react-redux": "^9.2.0",
     "react-router": "^7.9.6",
