--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "firebase": "^12.6.0",
     "form": "^0.2.5",
     "hook": "^0.1.0",
+    "lucide-react": "^0.556.0",
     "react": "^19.2.0",
     "react-calendar": "^6.0.0",
     "react-date-picker": "^12.0.1",
