--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "axios": "^1.13.2",
     "firebase": "^12.6.0",
     "form": "^0.2.5",
+    "framer-motion": "^12.23.25",
     "hook": "^0.1.0",
     "lucide-react": "^0.556.0",
     "react": "^19.2.0",
@@ -25,6 +26,7 @@
     "react-date-picker": "^12.0.1",
     "react-dom": "^19.2.0",
     "react-icons": "^5.5.0",
+    "react-intersection-observer": "^10.0.0",
     "react-redux": "^9.2.0",
     "react-router": "^7.9.6",
     "react-router-dom": "^7.9.6",
