--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "form": "^0.2.5",
     "framer-motion": "^12.23.25",
     "hook": "^0.1.0",
+    "leaflet": "^1.9.4",
     "lucide-react": "^0.556.0",
     "react": "^19.2.0",
     "react-calendar": "^6.0.0",
@@ -35,6 +36,7 @@
     "react-hot-toast": "^2.6.0",
     "react-icons": "^5.5.0",
     "react-intersection-observer": "^10.0.0",
+    "react-leaflet": "^5.0.0",
     "react-redux": "^9.2.0",
     "react-router": "^7.9.6",
     "react-router-dom": "^7.9.6",
