--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "react-redux": "^9.2.0",
     "react-router": "^7.9.6",
     "react-router-dom": "^7.9.6",
+    "sweetalert2": "^11.26.10",
     "zod": "^4.1.13"
   },
   "devDependencies": {
