--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@fortawesome/fontawesome": "^1.1.8",
     "@fortawesome/fontawesome-free": "^7.1.0",
     "@hookform/resolvers": "^5.2.2",
+    "@lottiefiles/dotlottie-react": "^0.17.10",
     "@mui/material": "^7.3.6",
     "@mui/x-date-pickers": "^8.21.0",
     "@reduxjs/toolkit": "^2.11.0",
