--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@mui/material": "^7.3.6",
     "@mui/x-date-pickers": "^8.21.0",
     "@reduxjs/toolkit": "^2.11.0",
+    "@stream-io/video-react-sdk": "^1.29.2",
     "@tailwindcss/vite": "^4.1.17",
     "axios": "^1.13.2",
     "date-fns": "^4.1.0",
